2013-08-29  Julien Bect  <julien.bect@supelec.fr>

	Rewrite stk_noisecov for clarity.

	* covfcs/stk_noisecov.m: modified.

2013-08-28  Julien Bect  <julien.bect@supelec.fr>

	Disable a warning in stk_predict.

	* stk_init.m: modified.

	Add checklist for creating releases.

	* etc/RELEASE_CHECKLIST: new text file.

	Add file AUTHORS (list of all contributors).

	* AUTHORS: new text file.

	Add admin script to find non-standard characters.

	* admin/findNonStandardCharacters: new bash script.

	Fix end of lines (use LF).

	* admin/fixEOL: new bash script to fix end of lines.
	* sampling/stk_sampling_vdc_rr2.c: fix EOL.
	* misc/dist/stk_filldist_exact.m: fix EOL.
	* misc/config/stk_octave_config.m: fix EOL.
	* misc/test/stk_runscript.m: fix EOL.

2013-08-27  Julien Bect  <julien.bect@supelec.fr>

	Fix a test.

	* core/stk_predict.m: fix a test.

2013-08-22  Julien Bect  <julien.bect@supelec.fr>

	Provide facilities for computing logdets.

	* core/@stk_kriging_equation/get.m: new function.
	* core/@stk_kriging_equation/set.m: new function.
	* misc/benchmarks/stk_benchmark_logdet.m: new script

	Prepare for future work on updating kreq objects.

	* core/@stk_kriging_equation/stk_update.m: new function

	Implement a greedy evaluation model in @stk_kriging_equation.

	* core/@stk_kriging_equation/stk_kriging_equation.m: modified.
	* core/@stk_kriging_equation/private/do_compute.m: new function.
	* core/@stk_kriging_equation/stk_squared_seminorm.m: new function.
	* core/@stk_kriging_equation/stk_predict.m: modified.
	* core/@stk_kriging_equation/get.m: new function.
	* core/@stk_kriging_equation/set.m: new function.
	* core/@stk_kriging_equation/linsolve.m: modified.
	* core/stk_predict.m: modified

2013-08-21  Julien Bect  <julien.bect@supelec.fr>

	Fix horzcat/vertcat in the stk_dataframe class (Octave only).

	* utils/@stk_dataframe/vertcat.m: modified.
	* utils/@stk_dataframe/horzcat.m: modified.

	Rewrite get/set in the stk_dataframe class.
